--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "velocity-animate": "^1.5.2",
     "vue-jest": "^1.0.2",
     "vue-lazyload": "^1.2.6",
     "vue-loader": "^13.3.0",
